apps/parksmap/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"parksmap:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"parksmap\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: workshop
    app.kubernetes.io/part-of: workshop
    app.openshift.io/runtime: spring-boot
    component: parksmap
    role: frontend
  name: parksmap
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: workshop
      component: parksmap
      deployment: parksmap
      role: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: workshop
        component: parksmap
        deployment: parksmap
        role: frontend
    spec:
      containers:
      - name: parksmap
        image: quay.io/williamsrlin/parksmap:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
