apps/parksmap/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: workshop
    component: parksmap
    role: frontend
  name: parksmap
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: workshop
    component: parksmap
    deployment: parksmap
    role: frontend
  sessionAffinity: None
  type: ClusterIP
